Fixed form jumping issue on Register page

--- a/browserswarm-plugin/static/style.css
+++ b/browserswarm-plugin/static/style.css
@@ -1674,7 +1674,16 @@ footer .wrap p {
 }
 
 .hero-unit > center .form-inline {
-	margin-top: 10px;
+	margin-top: 20px;
+}
+
+.hero-unit > center .form-inline input {
+	margin-top: 0;
+	vertical-align: top;
+}
+
+.hero-unit > center .form-inline input:active {
+	margin-bottom: 0;
 }
 
 
